# squirrel

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yaml
scripts/: build_image.sh
src/: config.rs  error.rs  main.rs  sample_workflow.yaml  utils.rs  web_driver.rs  wf.rs
src/wf/: workflow.rs  workflow_step.rs
