[package]
name = "squirrel-browser-automation"
version = "0.1.0"
edition = "2021"
authors = ["Munish Goyal"]
description = "Browser automation via YAML based workflow definition."
documentation = ""
readme = "README.md"
homepage = "https://github.com/goyalmunish/squirrel"
license = "MIT"
license-file = "LICENCE"
keywords = ["browser automation", "selenium", "browser", "automation"]
categories = ["development-tools", "development-tools::testing", "web-programming"]
exclude = ["assets", ".github", ".gitignore", "temp", "target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
chrono = "0.4.31"
async-recursion = "1.0.5"
tempfile = "3.9.0"
openssl = { version = "0.10", features = ["vendored"] }