[package]
name = "squirrel-browser-automation" # https://crates.io/crates/squirrel-browser-automation
version = "1.3.0"
edition = "2021"
authors = ["Munish Goyal"]
description = "Browser automation via YAML based workflow definition."
documentation = "https://docs.rs/crate/squirrel-browser-automation/latest"
readme = "README.md"
homepage = "https://github.com/goyalmunish/squirrel"
license-file = "LICENCE"
keywords = ["browser", "automation", "selenium"]
categories = ["development-tools", "development-tools::testing", "web-programming"]
exclude = ["assets", ".github", ".gitignore", "temp", "target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
chrono = "0.4.33"
async-recursion = "1.0.5"
tempfile = "3.9.0"
openssl = { version = "0.10.63", features = ["vendored"] }
